@@ -17,6 +17,7 @@ cmake_install.cmake
 CPack*Config.cmake
 uninstall.cmake
 CMakeCache.txt
+install_manifest.txt
 
 # scons
 .scons-option-cache
