@@ -65,18 +65,6 @@
     [event]
         name=prestart
 
-        [set_variables]
-            name=factions
-            [value]
-                {multiplayer/factions/drakes-default.cfg}
-                {multiplayer/factions/knalgans-default.cfg}
-                {multiplayer/factions/loyalists-default.cfg}
-                {multiplayer/factions/northerners-default.cfg}
-                {multiplayer/factions/rebels-default.cfg}
-                {multiplayer/factions/undead-default.cfg}
-            [/value]
-        [/set_variables]
-
         [lua]
             code={./2p_Hornshark_Island_lua}
         [/lua]
@@ -93,7 +81,7 @@
         [switch]
             variable=p1_faction
             [case]
-                value=$factions.multiplayer_side[0].id
+                value=_ "Drakes"
 
                 [unit]
                     side=1
@@ -149,7 +137,7 @@
                 [/unit]
             [/case]
             [case]
-                value=$factions.multiplayer_side[1].id
+                value=_ "Knalgan Alliance"
 
                 [unit]
                     side=1
@@ -214,7 +202,7 @@
             [/case]
 
             [case]
-                value=$factions.multiplayer_side[2].id
+                value=_ "Loyalists"
 
                 [unit]
                     side=1
@@ -289,7 +277,7 @@
             [/case]
 
             [case]
-                value=$factions.multiplayer_side[3].id
+                value=_ "Northerners"
 
                 [unit]
                     side=1
@@ -343,7 +331,7 @@
             [/case]
 
             [case]
-                value=$factions.multiplayer_side[4].id
+                value=_ "Rebels"
 
                 [unit]
                     side=1
@@ -400,7 +388,7 @@
                 [/unit]
             [/case]
             [case]
-                value=$factions.multiplayer_side[5].id
+                value=_ "Drakes"
 
                 [unit]
                     x,y=23,3
@@ -553,7 +541,7 @@
         [switch]
             variable=p2_faction
             [case]
-                value=$factions.multiplayer_side[0].id
+                value=_ "Drakes"
 
                 [unit]
                     side=2
@@ -609,7 +597,7 @@
                 [/unit]
             [/case]
             [case]
-                value=$factions.multiplayer_side[1].id
+                value=_ "Knalgan Alliance"
 
                 [unit]
                     side=2
@@ -674,7 +662,7 @@
             [/case]
 
             [case]
-                value=$factions.multiplayer_side[2].id
+                value=_ "Loyalists"
 
                 [unit]
                     side=2
@@ -749,7 +737,7 @@
             [/case]
 
             [case]
-                value=$factions.multiplayer_side[3].id
+                value=_ "Northerners"
 
                 [unit]
                     side=2
@@ -803,7 +791,7 @@
             [/case]
 
             [case]
-                value=$factions.multiplayer_side[4].id
+                value=_ "Rebels"
 
                 [unit]
                     side=2
@@ -860,7 +848,7 @@
                 [/unit]
             [/case]
             [case]
-                value=$factions.multiplayer_side[5].id
+                value=_ "Undead"
 
                 [unit]
                     x,y=6,20
