@@ -134,10 +134,12 @@ Version 1.13.4+dev:
      * abilities - list of the IDs of all abilities
    * Additional fields in table returned by wesnoth.get_terrain_info:
      * icon, editor_image, light
-   * Additional fields in unit type proxu:
+   * Additional fields in unit type proxy:
      * race, id, alignment
      * attacks, which returns the same thing as unit.attacks
      * abilities, same as unit.abilities
+   * Additional field in side proxy:
+     * faction_name
    * LuaAI:
      * The table returned by check_*() now has a "result" field which
        gives a description of the action's result; similar to "status"
